[gd_scene load_steps=6 format=3 uid="uid://intro123"]

[ext_resource type="PackedScene" uid="uid://player123" path="res://player.tscn" id="1_player"]
[ext_resource type="Script" path="res://intro.gd" id="2_intro"]
[ext_resource type="Texture2D" uid="uid://cavalier" path="res://cavalier_pixel_art.png" id="3_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_floor"]
size = Vector2(1600, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exit"]
size = Vector2(80, 150)

[node name="Intro" type="Node2D"]
script = ExtResource("2_intro")

[node name="Player" parent="." instance=ExtResource("1_player")]
z_index = 10
position = Vector2(1000, 900)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(800, 1032)

[node name="ColorRect" type="ColorRect" parent="Floor"]
offset_left = -800.0
offset_top = -32.0
offset_right = 800.0
offset_bottom = 32.0
color = Color(0.4, 0.25, 0.15, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_floor")

[node name="BackWall" type="ColorRect" parent="."]
z_index = -10
offset_left = 0.0
offset_top = 200.0
offset_right = 1600.0
offset_bottom = 1000.0
color = Color(0.6, 0.55, 0.5, 1)

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(32, 600)

[node name="ColorRect" type="ColorRect" parent="LeftWall"]
offset_left = -32.0
offset_top = -400.0
offset_right = 32.0
offset_bottom = 400.0
color = Color(0.5, 0.45, 0.4, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_floor")
rotation = 1.5708

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(1568, 600)

[node name="ColorRect" type="ColorRect" parent="RightWall"]
offset_left = -32.0
offset_top = -400.0
offset_right = 32.0
offset_bottom = 400.0
color = Color(0.5, 0.45, 0.4, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_floor")
rotation = 1.5708

[node name="WindowSky" type="ColorRect" parent="."]
z_index = -8
offset_left = 1300.0
offset_top = 400.0
offset_right = 1500.0
offset_bottom = 650.0
color = Color(0.15, 0.15, 0.25, 1)

[node name="TreeTrunk" type="ColorRect" parent="."]
z_index = -6
offset_left = 1340.0
offset_top = 480.0
offset_right = 1440.0
offset_bottom = 700.0
color = Color(0.4, 0.25, 0.1, 1)

[node name="TreeLeaves" type="ColorRect" parent="."]
z_index = -6
offset_left = 1280.0
offset_top = 380.0
offset_right = 1500.0
offset_bottom = 520.0
color = Color(0.2, 0.5, 0.2, 1)

[node name="WindowFrameTop" type="ColorRect" parent="."]
z_index = -4
offset_left = 1290.0
offset_top = 390.0
offset_right = 1510.0
offset_bottom = 400.0
color = Color(0.35, 0.2, 0.1, 1)

[node name="WindowFrameBottom" type="ColorRect" parent="."]
z_index = -4
offset_left = 1290.0
offset_top = 650.0
offset_right = 1510.0
offset_bottom = 660.0
color = Color(0.35, 0.2, 0.1, 1)

[node name="WindowFrameLeft" type="ColorRect" parent="."]
z_index = -4
offset_left = 1290.0
offset_top = 390.0
offset_right = 1300.0
offset_bottom = 660.0
color = Color(0.35, 0.2, 0.1, 1)

[node name="WindowFrameRight" type="ColorRect" parent="."]
z_index = -4
offset_left = 1500.0
offset_top = 390.0
offset_right = 1510.0
offset_bottom = 660.0
color = Color(0.35, 0.2, 0.1, 1)

[node name="TV" type="ColorRect" parent="."]
offset_left = 1050.0
offset_top = 750.0
offset_right = 1150.0
offset_bottom = 850.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="Screen" type="ColorRect" parent="TV"]
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 75.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="TVStand" type="ColorRect" parent="TV"]
offset_left = -20.0
offset_top = 100.0
offset_right = 120.0
offset_bottom = 150.0
color = Color(0.3, 0.2, 0.1, 1)

[node name="Bed" type="ColorRect" parent="."]
offset_left = 600.0
offset_top = 850.0
offset_right = 900.0
offset_bottom = 1000.0
color = Color(0.7, 0.3, 0.3, 1)

[node name="Pillow" type="ColorRect" parent="Bed"]
offset_left = 10.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 60.0
color = Color(0.9, 0.9, 0.85, 1)

[node name="Door" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 700.0
offset_right = 220.0
offset_bottom = 1000.0
color = Color(0.45, 0.3, 0.15, 1)

[node name="Doorknob" type="ColorRect" parent="Door"]
offset_left = 100.0
offset_top = 130.0
offset_right = 115.0
offset_bottom = 160.0
color = Color(0.8, 0.7, 0.2, 1)

[node name="ExitArea" type="Area2D" parent="."]
position = Vector2(160, 925)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("RectangleShape2D_exit")

[node name="NPC" type="Sprite2D" parent="."]
visible = false
position = Vector2(1550, 450)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_sprite")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueLabel" type="Label" parent="UI"]
offset_left = 100.0
offset_top = 100.0
offset_right = 1500.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="ContinueLabel" type="Label" parent="UI"]
visible = false
offset_left = 100.0
offset_top = 150.0
offset_right = 1500.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
text = "[Press SPACE to continue]"
horizontal_alignment = 1

[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
